--- a/css/base.css
+++ b/css/base.css
@@ -8,7 +8,7 @@ body {
 }
 
 a {
-  color: #3fad37;
+  color: #006EBD;
   text-decoration: none;
 }
 
@@ -27,7 +27,7 @@ h6 {
 }
 
 h1 {
-  background: #aea0a0;
+  background: #FFE5FE;
   width: 100%;
   overflow: auto;
   padding: 20px 0 20px 40px;
