--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,10 @@
 @import url(//fonts.googleapis.com/css?family=Roboto:500,300,400);
 
+
+/*
+ * Base styles
+ */
+
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -27,7 +32,7 @@ h6 {
 }
 
 h1 {
-  background: #FFE5FE;
+  background: hsl(170, 26%, 19%);
   width: 100%;
   overflow: auto;
   padding: 20px 0 20px 40px;
@@ -53,24 +58,24 @@ h1 {
 }
 
 #header {
-  background: #2d4f2a;
+  background: #D65DB1;
   overflow: auto;
   padding: 10px 20px;
-  border-bottom: 6px solid #3fad37;
+  border-bottom: 6px solid #FF9671;
 }
 
 #header .logo {
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  text-transform: uppercase;
+  text-transform: lowercase;
   font-size: 24px;
-  color: #fff;
+  color: #B0A8B9;
   float: left;
 }
 
 #header a {
-  color: #fff;
+  color: #FBEAFF;
 }
 
 #header .menu {
@@ -124,7 +129,7 @@ h1 {
 }
 
 .contents ul a:hover {
-  color: #4dcc43;
+  color: #1f0b57;
   cursor: move;
 }
 
@@ -132,7 +137,7 @@ ul.content-types li {
   list-style: none;
   float: left;
   margin: 10px;
-  background: #efefef;
+  background: #2e1616;
   padding: 8px 14px;
 }
 
@@ -189,14 +194,14 @@ a.button {
 }
 
 a.secondary-button {
-  border: 3px solid #4dcc43;
+  border: 3px solid #0a1a09;
   padding: 10px 20px;
   margin: 10px 0;
 }
 
 input[type="submit"]:hover,
 a.button:hover {
-  background: #3fad37;
+  background: #121a11;
 }
 
 ul#course-modules {
@@ -235,7 +240,7 @@ ul#course-modules li:hover {
 }
 
 #module-contents input[type="submit"] {
-  color: #3fad37;
+  color: #262e25;
   background: none;
   margin: -20px 0 0;
   padding: 0;
@@ -289,7 +294,7 @@ ul#course-modules li:hover {
   display: inline;
   float: left;
   background: #dcede0;
-  color: #56a668;
+  color: #798d7e;
 }
 
 #chat .date {
